# circfirm-hello-world

./: Makefile  README.rst  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  push.yml
circfirm_hello_world/: __init__.py
tests/: test_plugin.py
